Footer setup + other enahncements.

--- a/scss/style.scss
+++ b/scss/style.scss
@@ -29,7 +29,7 @@ $font-weight-light:300;
 $font-weight-normal:300;
 $font-weight-bold:700;
 $font-scale:1.6;
-$line-height:$font-scale + em;
+$line-height:$font-scale;
 $text-margin-bottom:1.5rem;
 
 // Background colors
